# simple_oop

./: .gitignore  README.md  pyproject.toml
docs/: forward_backward.md
src/: basic_oop.py  titanic_pipeline.py
src/week1/: iris.py
src/week2/: titanic.py
src/week3/: image.py  mnist.py
src/week4/: cifar.py
