[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-example"
version = "0.1.0"
description = "A simple Python project with OOP examples"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "seaborn>=0.13.2",
    "pandas>=1.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["src"]
